# pollo

./: .buildinfo  .gitignore  CNAME  LICENSE  README.md  REVERSE_PROXY.md  REVERSE_PROXY_SETUP.md  genindex.html  hit_maker.py  index.html  manual_selection.py  objects.inv  pyproject.toml  requester.ipynb  requester.py  requirements.txt  reverse_proxy_setup.html  search.html  searchindex.js  server.py  setup.py
.doctrees/: environment.pickle  index.doctree  reverse_proxy_setup.doctree
.github/workflows/: deploy-docs.yml
_sources/: index.md.txt  index.rst.txt  reverse_proxy_setup.md.txt
anno/: requester.py
anno/hit_makers/: base.py  biasgan.py  friends.py
anno/utils/: misc.py
docs/: conf.py  index.html
examples/image_project/: requester.ipynb
hit_maker/: friends.py  hit_maker.py
hit_makers/: biasgan_hit_maker.py  hit_maker.py  incidents_dataset_hit_maker.py
notebooks/: biasgan.ipynb  biasgan_jul13.ipynb  black50_white50.csv  friends.ipynb  imports.py  real.csv  responses_urls.json
pages/: img_classify.html  interface.html  mturk.html  responses.html
pollo/: example_templates.py  requester.py  server.py
pollo/hit_makers/: biasgan.py  friends.py
pollo/utils/: hit.py  io.py
pollo/web/pages/: interface.html
pollo/web/static/: mturk.js  pickn.js  responses.js  utils.js
static/: main.css  mturk.js  pickn.js  responses.js  utils.js
static/img_classify/js/: get_data.js
web/pages/: interface.html
