[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pollo"
version = "0.0.0"
description = "A repo for qualitative user studies using Amazon Mechanical Turk (AMT)."
requires-python = ">=3.6"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python",
]
dependencies = [
    "boto3",
    "flask-cors>=4.0.0",
    "flask>=3.0.1",
    "mediapy",
    "pandas",
    "requests",
    "tqdm",
    "xmltodict"
]

[tool.setuptools.packages.find]
include = ["pollo"]